# hosts_updater_rs

./: Cargo.toml  README.md  sync_to_server.sh
.github/workflows/: release.yml
src/: config.rs  fetcher.rs  hosts.rs  main.rs  scheduler.rs
