[package]
name = "hosts_updater_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }

# HTTP 客户端
reqwest = { version = "0.13.1", features = ["blocking"] }

# 序列化支持
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.10+spec-1.1.0"
yaml-rust = "0.4"
serde_yaml = "0.9"

# 错误处理
anyhow = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 目录路径获取
directories = "6.0.0"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
# 或 "s"，z 最小，s 稍快
opt-level = "z"
# 跨 crate 链接优化，删除更多无用代码
lto = true
# 牺牲编译速度，换体积
codegen-units = 1
# 不生成 panic unwind 逻辑
panic = "abort"
# 自动移除符号（Rust 1.67+）
strip = true
